tests/snapshots/test_runner__tests__compiler__typecheck__enum_5__enum_5.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
class Foo = Bar

entry
  let a: Foo = Bar "hi";
  ()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/enum_5/enum_5.kk:4:16
  │
4 │   let a: Foo = Bar "hi";
  │                ^^^ Cannot call a non-function
  │
  = The type of this expression is not function, so you cannot call it.
